[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/pipe.png" type="Texture" id=1]
[ext_resource path="res://src/enviroment/Pipes.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5573, 289.142 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5373, 291.089 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.13202, 84.043 )

[node name="Pipes" type="Node2D"]
position = Vector2( 480, 0 )
script = ExtResource( 2 )

[node name="PipesArea" type="Area2D" parent="."]
collision_layer = 2

[node name="BottomPipeSprite" type="Sprite" parent="PipesArea"]
position = Vector2( 0, 692 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PipesArea"]
position = Vector2( 0, 740 )
shape = SubResource( 1 )

[node name="TopPipeSprite" type="Sprite" parent="PipesArea"]
position = Vector2( 0, 48.7353 )
rotation = 3.14159
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipesArea"]
shape = SubResource( 2 )

[node name="ScoreZone" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZone"]
position = Vector2( 0, 370 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.5874, 369.864 )

[connection signal="area_entered" from="PipesArea" to="." method="_on_PipesArea_area_entered"]
[connection signal="area_entered" from="ScoreZone" to="." method="_on_ScoreZone_area_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
